[gd_scene load_steps=88 format=3 uid="uid://cl3y2t65k6cmk"]

[ext_resource type="Script" uid="uid://u1r1qpeevjpv" path="res://campaign stages/stage_7_9_normal_stage.gd" id="1_1m0go"]
[ext_resource type="Texture2D" uid="uid://dox6s2pdaah6p" path="res://asset/art/Gray.png" id="2_p3b6c"]
[ext_resource type="Texture2D" uid="uid://bkrrwc3mf8xlp" path="res://asset/art/download_10.png" id="3_s2kas"]
[ext_resource type="Texture2D" uid="uid://b2capxdpvd4vu" path="res://asset/UI/Transparent.png" id="4_a7lre"]
[ext_resource type="Texture2D" uid="uid://chaqjm0dpslnu" path="res://asset/art/256x256 Pixel Textures/256x256/256_Brick 05.png" id="5_hc5hk"]
[ext_resource type="Texture2D" uid="uid://dwldsahsmum7d" path="res://asset/UI/1.png" id="5_juahw"]
[ext_resource type="Texture2D" uid="uid://byifsb6867sav" path="res://asset/UI/2.png" id="6_b03tg"]
[ext_resource type="Texture2D" uid="uid://c8rseeirdyqfk" path="res://asset/UI/3.png" id="7_cdn6m"]
[ext_resource type="Texture2D" uid="uid://cu3m3ho7b3kno" path="res://asset/UI/4.png" id="8_wdb5h"]
[ext_resource type="Texture2D" uid="uid://mxvx0bwdcd3w" path="res://asset/UI/5.png" id="9_4arnl"]
[ext_resource type="Texture2D" uid="uid://c5dw3ydc1s4yr" path="res://asset/UI/6.png" id="10_ijpr0"]
[ext_resource type="Texture2D" uid="uid://bffoin8e0nw4" path="res://asset/UI/7.png" id="11_gf8fd"]
[ext_resource type="Texture2D" uid="uid://b3hia88v6t47b" path="res://asset/UI/8.png" id="12_n8lfw"]
[ext_resource type="Texture2D" uid="uid://d18k506xrmby4" path="res://asset/UI/9.png" id="13_lqoxv"]
[ext_resource type="Texture2D" uid="uid://d1m1q7ev7ot2i" path="res://asset/UI/Clear.png" id="14_utnfa"]
[ext_resource type="Texture2D" uid="uid://dxetc5bv3s2kd" path="res://asset/UI/0.png" id="15_g1drk"]
[ext_resource type="Texture2D" uid="uid://k0bwslbq0k4d" path="res://asset/UI/backspace.png" id="16_nol5g"]
[ext_resource type="Texture2D" uid="uid://b5c62fsc3wbw4" path="res://asset/UI/Back.png" id="17_33drr"]
[ext_resource type="Texture2D" uid="uid://dawnge3ejgh62" path="res://asset/UI/pass.png" id="18_f0r5c"]
[ext_resource type="Texture2D" uid="uid://bna1q8ks5cu2m" path="res://asset/enemy/Medieval Warrior Pack 2/Sprites/Attack3.png" id="20_s2kas"]
[ext_resource type="Texture2D" uid="uid://coq6okx80h1fv" path="res://asset/enemy/Medieval Warrior Pack 2/Sprites/Death.png" id="21_s2kas"]
[ext_resource type="Texture2D" uid="uid://dp3npaf6ouxyu" path="res://asset/Main Character/Crusader-4-Attacking.png" id="22_0s5sh"]
[ext_resource type="Texture2D" uid="uid://crq24r64fapyu" path="res://asset/enemy/Medieval Warrior Pack 2/Sprites/Take Hit - white silhouette.png" id="22_gtrl5"]
[ext_resource type="Texture2D" uid="uid://b2i5aosotcqv3" path="res://asset/Main Character/Crusader-4-Hurt.png" id="23_b7jok"]
[ext_resource type="Texture2D" uid="uid://dywwx8y5wxycf" path="res://asset/enemy/Medieval Warrior Pack 2/Sprites/Idle.png" id="23_x5pal"]
[ext_resource type="Texture2D" uid="uid://msivu6nn77gg" path="res://asset/Main Character/Crusader-4-Idle.png" id="24_0eh1d"]
[ext_resource type="Texture2D" uid="uid://b2nntdra7sa62" path="res://asset/enemy/Medieval Warrior Pack 2/Sprites/Run.png" id="24_2gcty"]
[ext_resource type="Texture2D" uid="uid://6fkjaxweqoi0" path="res://asset/Main Character/Crusader-4-Running.png" id="26_benyh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rtb4t"]
atlas = ExtResource("20_s2kas")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ggbn"]
atlas = ExtResource("20_s2kas")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vni4"]
atlas = ExtResource("20_s2kas")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_3jj02"]
atlas = ExtResource("20_s2kas")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtrl5"]
atlas = ExtResource("21_s2kas")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5pal"]
atlas = ExtResource("21_s2kas")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gcty"]
atlas = ExtResource("21_s2kas")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ww8t7"]
atlas = ExtResource("21_s2kas")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jpwh"]
atlas = ExtResource("21_s2kas")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_kuhmm"]
atlas = ExtResource("21_s2kas")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_5g51o"]
atlas = ExtResource("22_gtrl5")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_c77a3"]
atlas = ExtResource("22_gtrl5")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_07ne5"]
atlas = ExtResource("22_gtrl5")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_gkv21"]
atlas = ExtResource("22_gtrl5")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjbxc"]
atlas = ExtResource("23_x5pal")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_70ff6"]
atlas = ExtResource("23_x5pal")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3842"]
atlas = ExtResource("23_x5pal")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rf7k"]
atlas = ExtResource("23_x5pal")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3rxq"]
atlas = ExtResource("23_x5pal")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6ovj"]
atlas = ExtResource("23_x5pal")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubm16"]
atlas = ExtResource("23_x5pal")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ni0j"]
atlas = ExtResource("24_2gcty")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_r52o6"]
atlas = ExtResource("24_2gcty")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_nv77x"]
atlas = ExtResource("24_2gcty")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_gj1nk"]
atlas = ExtResource("24_2gcty")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5mlq"]
atlas = ExtResource("24_2gcty")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_if1e1"]
atlas = ExtResource("24_2gcty")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_8uh6s"]
atlas = ExtResource("24_2gcty")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_nn58u"]
atlas = ExtResource("24_2gcty")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_x5pal"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rtb4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ggbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vni4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jj02")
}],
"loop": false,
"name": &"Attack",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtrl5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5pal")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gcty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ww8t7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jpwh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kuhmm")
}],
"loop": false,
"name": &"Death",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5g51o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c77a3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_07ne5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gkv21")
}],
"loop": false,
"name": &"Hit",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjbxc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70ff6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3842")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rf7k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3rxq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6ovj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubm16")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ni0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r52o6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nv77x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gj1nk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5mlq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_if1e1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8uh6s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nn58u")
}],
"loop": false,
"name": &"Run",
"speed": 20.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_sfoa5"]
atlas = ExtResource("22_0s5sh")
region = Rect2(0, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_tdos0"]
atlas = ExtResource("22_0s5sh")
region = Rect2(112, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4yg5"]
atlas = ExtResource("22_0s5sh")
region = Rect2(224, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ce2c8"]
atlas = ExtResource("22_0s5sh")
region = Rect2(336, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1wwy"]
atlas = ExtResource("22_0s5sh")
region = Rect2(448, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_6dvmw"]
atlas = ExtResource("22_0s5sh")
region = Rect2(560, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_14vdb"]
atlas = ExtResource("22_0s5sh")
region = Rect2(672, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_smlam"]
atlas = ExtResource("22_0s5sh")
region = Rect2(784, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_vrdw4"]
atlas = ExtResource("22_0s5sh")
region = Rect2(896, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_47qit"]
atlas = ExtResource("22_0s5sh")
region = Rect2(1008, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjnfl"]
atlas = ExtResource("22_0s5sh")
region = Rect2(1120, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_145la"]
atlas = ExtResource("22_0s5sh")
region = Rect2(1232, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8ntu"]
atlas = ExtResource("22_0s5sh")
region = Rect2(1344, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfi3t"]
atlas = ExtResource("23_b7jok")
region = Rect2(0, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmonm"]
atlas = ExtResource("23_b7jok")
region = Rect2(112, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvjsg"]
atlas = ExtResource("23_b7jok")
region = Rect2(224, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_y1ugn"]
atlas = ExtResource("24_0eh1d")
region = Rect2(0, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_egps7"]
atlas = ExtResource("24_0eh1d")
region = Rect2(112, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xd5r"]
atlas = ExtResource("24_0eh1d")
region = Rect2(224, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_cer56"]
atlas = ExtResource("24_0eh1d")
region = Rect2(336, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ew6hb"]
atlas = ExtResource("24_0eh1d")
region = Rect2(448, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5kbt"]
atlas = ExtResource("24_0eh1d")
region = Rect2(560, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ag8n1"]
atlas = ExtResource("26_benyh")
region = Rect2(0, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_elli2"]
atlas = ExtResource("26_benyh")
region = Rect2(112, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_jcwxx"]
atlas = ExtResource("26_benyh")
region = Rect2(224, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6p16"]
atlas = ExtResource("26_benyh")
region = Rect2(336, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqdgr"]
atlas = ExtResource("26_benyh")
region = Rect2(448, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_peqg7"]
atlas = ExtResource("26_benyh")
region = Rect2(560, 0, 112, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_benyh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfoa5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tdos0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4yg5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ce2c8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1wwy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6dvmw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14vdb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smlam")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vrdw4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_47qit")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yjnfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_145la")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8ntu")
}],
"loop": false,
"name": &"Attack",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfi3t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmonm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvjsg")
}],
"loop": false,
"name": &"Hit",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1ugn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_egps7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xd5r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cer56")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ew6hb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5kbt")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ag8n1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_elli2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jcwxx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6p16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqdgr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_peqg7")
}],
"loop": false,
"name": &"Run",
"speed": 20.0
}]

[node name="S7_9Normal" type="Node2D"]
script = ExtResource("1_1m0go")

[node name="Stage_BG" type="TextureRect" parent="."]
anchors_preset = -1
anchor_left = -12.975
anchor_top = -23.375
anchor_right = -12.975
anchor_bottom = -23.375
offset_right = 1080.0
offset_bottom = 1912.0
texture = ExtResource("2_p3b6c")
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="Stage1_3BG" type="TextureRect" parent="."]
offset_right = 1080.0
offset_bottom = 776.0
texture = ExtResource("3_s2kas")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 64.0
offset_top = 128.0
offset_right = 4635.0
offset_bottom = 1208.0
scale = Vector2(0.21, 0.15)
texture = ExtResource("4_a7lre")
metadata/_edit_lock_ = true

[node name="ProblemLabel" type="Label" parent="."]
offset_left = 104.0
offset_top = 152.0
offset_right = 976.0
offset_bottom = 262.0
theme_override_font_sizes/font_size = 80
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="TextureRect2" type="TextureRect" parent="."]
offset_left = 440.0
offset_top = 624.0
offset_right = 1469.0
offset_bottom = 1424.0
scale = Vector2(0.21, 0.15)
texture = ExtResource("4_a7lre")
expand_mode = 1

[node name="AnswerLabel" type="Label" parent="."]
offset_left = 440.0
offset_top = 616.0
offset_right = 656.0
offset_bottom = 736.0
theme_override_font_sizes/font_size = 100
horizontal_alignment = 1
vertical_alignment = 1

[node name="numpad_bg" type="TextureRect" parent="."]
offset_left = -8.0
offset_top = 776.0
offset_right = 1080.0
offset_bottom = 1920.0
texture = ExtResource("5_hc5hk")

[node name="Number_Button" type="VBoxContainer" parent="."]
offset_left = 221.58
offset_top = 932.78
offset_right = 853.58
offset_bottom = 1774.78
scale = Vector2(0.935, 0.935)

[node name="num_row_123" type="HBoxContainer" parent="Number_Button"]
layout_mode = 2

[node name="one" type="Button" parent="Number_Button/num_row_123"]
layout_mode = 2
theme_override_font_sizes/font_size = 1
icon = ExtResource("5_juahw")
flat = true
icon_alignment = 1

[node name="two" type="Button" parent="Number_Button/num_row_123"]
layout_mode = 2
icon = ExtResource("6_b03tg")
flat = true
icon_alignment = 1

[node name="three" type="Button" parent="Number_Button/num_row_123"]
layout_mode = 2
icon = ExtResource("7_cdn6m")
flat = true
icon_alignment = 1

[node name="num_row_456" type="HBoxContainer" parent="Number_Button"]
layout_mode = 2

[node name="four" type="Button" parent="Number_Button/num_row_456"]
layout_mode = 2
icon = ExtResource("8_wdb5h")
flat = true
icon_alignment = 1

[node name="five" type="Button" parent="Number_Button/num_row_456"]
layout_mode = 2
icon = ExtResource("9_4arnl")
flat = true
icon_alignment = 1

[node name="six" type="Button" parent="Number_Button/num_row_456"]
layout_mode = 2
icon = ExtResource("10_ijpr0")
flat = true
icon_alignment = 1

[node name="num_row_789" type="HBoxContainer" parent="Number_Button"]
layout_mode = 2

[node name="seven" type="Button" parent="Number_Button/num_row_789"]
layout_mode = 2
icon = ExtResource("11_gf8fd")
flat = true
icon_alignment = 1

[node name="eight" type="Button" parent="Number_Button/num_row_789"]
layout_mode = 2
icon = ExtResource("12_n8lfw")
flat = true
icon_alignment = 1

[node name="nine" type="Button" parent="Number_Button/num_row_789"]
layout_mode = 2
icon = ExtResource("13_lqoxv")
flat = true
icon_alignment = 1

[node name="num_row_0_clear_bckspace" type="HBoxContainer" parent="Number_Button"]
layout_mode = 2
size_flags_horizontal = 4

[node name="clear" type="Button" parent="Number_Button/num_row_0_clear_bckspace"]
layout_mode = 2
icon = ExtResource("14_utnfa")
flat = true
icon_alignment = 1

[node name="zero" type="Button" parent="Number_Button/num_row_0_clear_bckspace"]
layout_mode = 2
icon = ExtResource("15_g1drk")
flat = true
alignment = 0
icon_alignment = 1

[node name="back" type="Button" parent="Number_Button/num_row_0_clear_bckspace"]
layout_mode = 2
icon = ExtResource("16_nol5g")
flat = true
icon_alignment = 1

[node name="Placeholder_BackButton" type="Button" parent="."]
offset_left = 20.895
offset_top = 1762.67
offset_right = 352.895
offset_bottom = 2093.67
scale = Vector2(0.4, 0.4)
icon = ExtResource("17_33drr")
flat = true
icon_alignment = 1

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 888.0
offset_top = 56.0
offset_right = 1022.0
offset_bottom = 125.0
theme_override_font_sizes/font_size = 50

[node name="SDisLabel" type="Label" parent="."]
offset_left = 888.0
offset_top = 8.0
offset_right = 1026.0
offset_bottom = 76.0
theme_override_font_sizes/font_size = 40
text = "SCORE:"

[node name="Submit" type="Button" parent="."]
offset_left = 822.0
offset_top = 925.485
offset_right = 1047.0
offset_bottom = 1131.48
theme_override_font_sizes/font_size = 100
text = "
"
icon = ExtResource("18_f0r5c")
flat = true
icon_alignment = 1

[node name="HPLabel" type="Label" parent="."]
offset_left = 72.0
offset_top = 56.0
offset_right = 112.0
offset_bottom = 125.0
theme_override_font_sizes/font_size = 20

[node name="HPDisLabel" type="Label" parent="."]
offset_left = 64.0
offset_right = 217.0
offset_bottom = 55.0
theme_override_font_sizes/font_size = 40
text = "HEALTH"

[node name="TimerLabel" type="Label" parent="."]
offset_left = 512.0
offset_top = 48.0
offset_right = 569.0
offset_bottom = 117.0
theme_override_font_sizes/font_size = 50

[node name="TDisLabel" type="Label" parent="."]
offset_left = 496.0
offset_right = 590.0
offset_bottom = 55.0
theme_override_font_sizes/font_size = 40
text = "TIME"

[node name="Enemy2" type="AnimatedSprite2D" parent="."]
position = Vector2(864, 576)
scale = Vector2(4.60574, 5.31972)
sprite_frames = SubResource("SpriteFrames_x5pal")
animation = &"Idle"
flip_h = true

[node name="Player" type="AnimatedSprite2D" parent="."]
position = Vector2(256, 520)
scale = Vector2(3.97076, 3.41458)
sprite_frames = SubResource("SpriteFrames_benyh")
animation = &"Idle"

[connection signal="pressed" from="Number_Button/num_row_123/one" to="." method="_on_one_pressed"]
[connection signal="pressed" from="Number_Button/num_row_123/two" to="." method="_on_two_pressed"]
[connection signal="pressed" from="Number_Button/num_row_123/three" to="." method="_on_three_pressed"]
[connection signal="pressed" from="Number_Button/num_row_456/four" to="." method="_on_four_pressed"]
[connection signal="pressed" from="Number_Button/num_row_456/five" to="." method="_on_five_pressed"]
[connection signal="pressed" from="Number_Button/num_row_456/six" to="." method="_on_six_pressed"]
[connection signal="pressed" from="Number_Button/num_row_789/seven" to="." method="_on_seven_pressed"]
[connection signal="pressed" from="Number_Button/num_row_789/eight" to="." method="_on_eight_pressed"]
[connection signal="pressed" from="Number_Button/num_row_789/nine" to="." method="_on_nine_pressed"]
[connection signal="pressed" from="Number_Button/num_row_0_clear_bckspace/clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="Number_Button/num_row_0_clear_bckspace/zero" to="." method="_on_zero_pressed"]
[connection signal="pressed" from="Number_Button/num_row_0_clear_bckspace/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Placeholder_BackButton" to="." method="_on_placeholder_back_button_pressed"]
[connection signal="pressed" from="Submit" to="." method="_on_submit_pressed"]
